@@ -83,37 +83,41 @@ SCSI_Request_Sense_Response_t SenseData =
 /** Main routine to process the SCSI command located in the Command Block Wrapper read from the host. This dispatches
  *  to the appropriate SCSI command handling routine if the issued command is supported by the device, else it returns
  *  a command failure due to a ILLEGAL REQUEST.
+ *
+ *  \return Boolean true if the command completed sucessfully, false otherwise
  */
-void SCSI_DecodeSCSICommand(void)
+bool SCSI_DecodeSCSICommand(void)
 {
-	bool CommandSuccess = false;
+	/* Set initial sense data, before the requested command is processed */
+	SCSI_SET_SENSE(SCSI_SENSE_KEY_GOOD,
+	               SCSI_ASENSE_NO_ADDITIONAL_INFORMATION,
+	               SCSI_ASENSEQ_NO_QUALIFIER);
 
 	/* Run the appropriate SCSI command hander function based on the passed command */
 	switch (CommandBlock.SCSICommandData[0])
 	{
 		case SCSI_CMD_INQUIRY:
-			CommandSuccess = SCSI_Command_Inquiry();			
+			SCSI_Command_Inquiry();			
 			break;
 		case SCSI_CMD_REQUEST_SENSE:
-			CommandSuccess = SCSI_Command_Request_Sense();
+			SCSI_Command_Request_Sense();
 			break;
 		case SCSI_CMD_READ_CAPACITY_10:
-			CommandSuccess = SCSI_Command_Read_Capacity_10();			
+			SCSI_Command_Read_Capacity_10();			
 			break;
 		case SCSI_CMD_SEND_DIAGNOSTIC:
-			CommandSuccess = SCSI_Command_Send_Diagnostic();
+			SCSI_Command_Send_Diagnostic();
 			break;
 		case SCSI_CMD_WRITE_10:
-			CommandSuccess = SCSI_Command_ReadWrite_10(DATA_WRITE);
+			SCSI_Command_ReadWrite_10(DATA_WRITE);
 			break;
 		case SCSI_CMD_READ_10:
-			CommandSuccess = SCSI_Command_ReadWrite_10(DATA_READ);
+			SCSI_Command_ReadWrite_10(DATA_READ);
 			break;
 		case SCSI_CMD_TEST_UNIT_READY:
 		case SCSI_CMD_PREVENT_ALLOW_MEDIUM_REMOVAL:
 		case SCSI_CMD_VERIFY_10:
 			/* These commands should just succeed, no handling required */
-			CommandSuccess = true;
 			CommandBlock.DataTransferLength = 0;
 			break;
 		default:
@@ -124,29 +128,13 @@ void SCSI_DecodeSCSICommand(void)
 			break;
 	}
 	
-	/* Check if command was successfully processed */
-	if (CommandSuccess)
-	{
-		/* Command succeeded - set the CSW status and update the SENSE key */
-		CommandStatus.Status = Command_Pass;
-		
-		SCSI_SET_SENSE(SCSI_SENSE_KEY_GOOD,
-		               SCSI_ASENSE_NO_ADDITIONAL_INFORMATION,
-		               SCSI_ASENSEQ_NO_QUALIFIER);					   
-	}
-	else
-	{
-		/* Command failed - set the CSW status - failed command function updates the SENSE key */
-		CommandStatus.Status = Command_Fail;
-	}
+	return (SenseData.SenseKey == SCSI_SENSE_KEY_GOOD);
 }
 
 /** Command processing for an issued SCSI INQUIRY command. This command returns information about the device's features
  *  and capabilities to the host.
- *
- *  \return Boolean true if the command completed successfully, false otherwise.
  */
-static bool SCSI_Command_Inquiry(void)
+static void SCSI_Command_Inquiry(void)
 {
 	uint16_t AllocationLength  = (((uint16_t)CommandBlock.SCSICommandData[3] << 8) |
 	                                         CommandBlock.SCSICommandData[4]);
@@ -162,7 +150,7 @@ static bool SCSI_Command_Inquiry(void)
 		               SCSI_ASENSE_INVALID_FIELD_IN_CDB,
 		               SCSI_ASENSEQ_NO_QUALIFIER);
 
-		return false;
+		return;
 	}
 
 	/* Write the INQUIRY data to the endpoint */
@@ -178,16 +166,12 @@ static bool SCSI_Command_Inquiry(void)
 
 	/* Succeed the command and update the bytes transferred counter */
 	CommandBlock.DataTransferLength -= BytesTransferred;
-	
-	return true;
 }
 
 /** Command processing for an issued SCSI REQUEST SENSE command. This command returns information about the last issued command,
  *  including the error code and additional error information so that the host can determine why a command failed to complete.
- *
- *  \return Boolean true if the command completed successfully, false otherwise.
  */
-static bool SCSI_Command_Request_Sense(void)
+static void SCSI_Command_Request_Sense(void)
 {
 	uint8_t  AllocationLength = CommandBlock.SCSICommandData[4];
 	uint8_t  BytesTransferred = (AllocationLength < sizeof(SenseData))? AllocationLength : sizeof(SenseData);
@@ -205,16 +189,12 @@ static bool SCSI_Command_Request_Sense(void)
 
 	/* Succeed the command and update the bytes transferred counter */
 	CommandBlock.DataTransferLength -= BytesTransferred;
-
-	return true;
 }
 
 /** Command processing for an issued SCSI READ CAPACITY (10) command. This command returns information about the device's capacity
  *  on the selected Logical Unit (drive), as a number of OS-sized blocks.
- *
- *  \return Boolean true if the command completed successfully, false otherwise.
  */
-static bool SCSI_Command_Read_Capacity_10(void)
+static void SCSI_Command_Read_Capacity_10(void)
 {
 	/* Send the total number of logical blocks in the current LUN */
 	Endpoint_Write_DWord_BE(LUN_MEDIA_BLOCKS - 1);
@@ -224,15 +204,13 @@ static bool SCSI_Command_Read_Capacity_10(void)
 
 	/* Check if the current command is being aborted by the host */
 	if (IsMassStoreReset)
-	  return false;
+	  return;
 
 	/* Send the endpoint data packet to the host */
 	Endpoint_ClearIN();
 
 	/* Succeed the command and update the bytes transferred counter */
 	CommandBlock.DataTransferLength -= 8;
-	
-	return true;
 }
 
 /** Command processing for an issued SCSI SEND DIAGNOSTIC command. This command performs a quick check of the Dataflash ICs on the
@@ -240,10 +218,8 @@ static bool SCSI_Command_Read_Capacity_10(void)
  *  supported.
  *
  *  \param[in] MSInterfaceInfo  Pointer to the Mass Storage class interface structure that the command is associated with
- *
- *  \return Boolean true if the command completed successfully, false otherwise.
  */
-static bool SCSI_Command_Send_Diagnostic(void)
+static void SCSI_Command_Send_Diagnostic(void)
 {
 	/* Check to see if the SELF TEST bit is not set */
 	if (!(CommandBlock.SCSICommandData[1] & (1 << 2)))
@@ -253,7 +229,7 @@ static bool SCSI_Command_Send_Diagnostic(void)
 		               SCSI_ASENSE_INVALID_FIELD_IN_CDB,
 		               SCSI_ASENSEQ_NO_QUALIFIER);
 
-		return false;
+		return;
 	}
 	
 	/* Check to see if all attached Dataflash ICs are functional */
@@ -264,13 +240,11 @@ static bool SCSI_Command_Send_Diagnostic(void)
 		               SCSI_ASENSE_NO_ADDITIONAL_INFORMATION,
 		               SCSI_ASENSEQ_NO_QUALIFIER);	
 	
-		return false;
+		return;
 	}
 	
 	/* Succeed the command and update the bytes transferred counter */
 	CommandBlock.DataTransferLength = 0;
-	
-	return true;
 }
 
 /** Command processing for an issued SCSI READ (10) or WRITE (10) command. This command reads in the block start address
@@ -278,10 +252,8 @@ static bool SCSI_Command_Send_Diagnostic(void)
  *  reading and writing of the data.
  *
  *  \param[in] IsDataRead  Indicates if the command is a READ (10) command or WRITE (10) command (DATA_READ or DATA_WRITE)
- *
- *  \return Boolean true if the command completed successfully, false otherwise.
  */
-static bool SCSI_Command_ReadWrite_10(const bool IsDataRead)
+static void SCSI_Command_ReadWrite_10(const bool IsDataRead)
 {
 	uint32_t BlockAddress;
 	uint16_t TotalBlocks;
@@ -304,7 +276,7 @@ static bool SCSI_Command_ReadWrite_10(const bool IsDataRead)
 		               SCSI_ASENSE_LOGICAL_BLOCK_ADDRESS_OUT_OF_RANGE,
 		               SCSI_ASENSEQ_NO_QUALIFIER);
 
-		return false;
+		return;
 	}
 
 	#if (TOTAL_LUNS > 1)
@@ -320,6 +292,4 @@ static bool SCSI_Command_ReadWrite_10(const bool IsDataRead)
 
 	/* Update the bytes transferred counter and succeed the command */
 	CommandBlock.DataTransferLength -= ((uint32_t)TotalBlocks * VIRTUAL_MEMORY_BLOCK_SIZE);
-	
-	return true;
 }
