@@ -22,15 +22,9 @@
  *  This means that while a build inside a particular demo directory will build only that particular demo, a build stated
  *  from the /Demos/ directory will build all LUFA demo projects sequentially.
  *
- *  \subsection SSec_CommandLine Via the Command Line
  *  To build a project from the source via the command line, the command <b>"make all"</b> should be executed from the command line in the directory
  *  of interest. To remove compiled files (including the binary output, all intermediately files and all diagnostic output
  *  files), execute <b>"make clean"</b>. Once a "make all" has been run and no errors were encountered, the resulting binary will
  *  be located in the generated ".HEX" file. If your project makes use of pre-initialized EEPROM variables, the generated ".EEP"
  *  file will contain the project's EEPROM data.
- *
- *  \subsection SSec_AVRStudio Via AVRStudio
- *  Each demo, project and bootloader contains an AVRStudio project (.aps) which can be used to build each project. Once opened
- *  in AVRStudio, the project can be built and cleaned using the GUI buttons or menus. Note that the AVRStudio project files make
- *  use of the external project makefile, thus the procedure for configuring a demo remains the same regardless of the build environment.
  */
